--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.19.0",
-    slf4jVersion = "1.7.32"
+def allureVersion = '2.20.0',
+    slf4jVersion = '2.0.5'
 
 allure {
     report {
@@ -26,11 +26,12 @@ allure {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.7.2",
+            'com.codeborne:selenide:6.10.3',
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.junit.jupiter:junit-jupiter:5.9.0",
             "org.slf4j:slf4j-simple:$slf4jVersion",
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:1.0.2",
+            'org.json:json:20220924'
     )
 }
 
